# MareTF

./: .gitignore  .gitmodules  CMakeLists.txt  CREDITS  README.md  create_sln.bat
.build-aux/: fetchcontent2flatpak.py
.build-aux/flatpak/: fetchcontent-sources.json  info.craftablescience.MareTF.yml  science.craftable.MareTF.yml
.github/workflows/: build.yml
docs/: CNAME  index.html
docs/assets/css/: maretf.css
ext/: _ext.cmake
install/: _install.cmake
install/linux/: desktop.in  metainfo.xml.in  mime-type.xml.in  thumbnailer.in
install/win/: InstallCommands.nsh.in  NSIS.InstallOptions.ini.in  NSIS.template.in  UninstallCommands.nsh.in
res/: olive_shade.ptc  olive_shade_ref.xcf  program.manifest  res.qrc
res/gui/: attribution.qrc  background.blend  background.pdn  background_landscape.blend  button_channel.xcf  button_load.xcf  button_new.xcf  button_new_multi.xcf  close.pdn  minimize.pdn  res.qrc  text_box.pdn
res/i18n/: maretf_en.ts  maretf_es.ts  maretf_ja.ts  maretf_ru_RU.ts
src/cli/: MareTF.cpp  MareTF.h  _cli.cmake
src/common/: Common.cpp  Common.h  Config.h.in  EnumMappings.cpp  EnumMappings.h
src/gui/: Credits.cpp  Credits.h  MareTF.cpp  MareTF.h  QMareCreateTexture.cpp  QMareCreateTexture.h  QMareCreateTextureDialog.cpp  QMareCreateTextureDialog.h  QMareCredits.cpp  QMareCredits.h  QMareDiscordPresence.h  QMareEmptyWindow.cpp  QMareEmptyWindow.h  QMareFlagsWidget.cpp  QMareFlagsWidget.h  QMareOptions.cpp  QMareOptions.h  QMareTextureWidget.cpp  QMareTextureWidget.h  QMareTextureWindow.cpp  QMareTextureWindow.h  _gui.cmake
src/gui/dialogs/: QMareCreateTextureDialog.cpp  QMareCreateTextureDialog.h  QMareCredits.cpp  QMareCreditsDialog.cpp  QMareCreditsDialog.h  QMareExtractFromTextureDialog.cpp  QMareExtractFromTextureDialog.h
src/gui/utility/: QMareCLIWrapper.cpp  QMareCLIWrapper.h  QMareDiscordPresence.cpp  QMareOptions.cpp  QMareOptions.h
src/gui/widgets/: QMareComboBox.cpp  QMareComboBox.h  QMareFilesystemBox.cpp  QMareFilesystemBox.h  QMareFlagsWidget.cpp  QMareFlagsWidget.h  QMareMiddleClickTabWidget.cpp  QMareMiddleClickTabWidget.h  QMareSpinBox.cpp  QMareSpinBox.h  QMareTextEditorWidget.cpp  QMareTextEditorWidget.h  QMareTextureWidget.cpp  QMareTextureWidget.h
src/gui/windows/: QMareEmptyWindow.cpp  QMareTextureWindow.cpp  QMareTextureWindow.h
src/thumbnailer/: CommonThumbnailer.cpp  CommonThumbnailer.h  _thumbnailer.cmake
src/thumbnailer/linux/: MareTF.cpp
src/thumbnailer/windows/: MareTF.cpp  MareTF.def.in
